# Django-Admin-Column-Toggle

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  pytest.ini
column_toggle/: admin.py  test_settings.py
column_toggle/static/column_toggle/: column_toggle.js
column_toggle/templates/column_toggle/: column_toggle.html
tests/: column_toggle.test.js  test_admin.py
