[tool.poetry]
name = "django-admin-column-toggle"
version = "0.4.1"
description = "A reusable Django package to add column toggle functionality in the Django admin interface."
authors = ["Simon Engwerda <simon@engwerda.net>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/engwerda/Django-Admin-Column-Toggle"
repository = "https://github.com/engwerda/Django-Admin-Column-Toggle"
keywords = ["django"]
packages = [{ include = "column_toggle" }]

exclude = ["column_toggle/test_settings.py"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
